# Oil-Field---Integrated-Reservoir-Operations-Dashboard

./: README.txt  app.py  config.toml  pyproject.toml  requirements.txt
data/: Volve_production_data.xlsx
src/: alerts.py  data_loader.py  dca_analysis.py  kpi_calculations.py  pdf_reports.py  visualizations.py
