[project]
name = "Volve_Field_Surveillance"
version = "0.1.0"
description = "Wells Data Dashboard for management and analysis"
requires-python = ">=3.11"
dependencies = [
    "fpdf2>=2.8.5",
    "numpy>=2.3.5",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "scipy>=1.16.3",
    "streamlit>=1.51.0",
]
